--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -12,18 +12,16 @@ spec:
   template:
     metadata: { labels: { app: backend } }
     spec:
-      containers:
-        - name: app
-          image: eminekibar/devopschallenge-backend:manual
-          ports: [{ containerPort: 8080 }]
-          env:
-            - name: ASPNETCORE_URLS
-              value: "http://0.0.0.0:8080"
-          readinessProbe:
-            httpGet: { path: /api/values, port: 8080 }
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          livenessProbe:
-            httpGet: { path: /api/values, port: 8080 }
-            initialDelaySeconds: 15
-            periodSeconds: 20
+      replicas: 2
+      template:
+        spec:
+          containers:
+          - name: app
+            image: eminekibar/devopschallenge-backend:manual
+            ports: [{ containerPort: 8080 }]
+            readinessProbe:
+              httpGet: { path: /api/values, port: 8080 }
+              initialDelaySeconds: 5
+            livenessProbe:
+              httpGet: { path: /api/values, port: 8080 }
+              initialDelaySeconds: 15
