--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -1,3 +1,4 @@
+# backend-deploy.yml (düzeltilmiş)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,8 +19,23 @@ spec:
       containers:
         - name: app
           image: eminekibar/devopschallenge-backend:manual
-          ports:
-            - containerPort: 8080
           env:
             - name: ASPNETCORE_URLS
-              value: "http://0.0.0.0:8080"
+              value: "http://0.0.0.0:11130"
+          ports:
+            - containerPort: 11130
+          readinessProbe:
+            httpGet: { path: "/", port: 11130 }
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet: { path: "/", port: 11130 }
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "300m"
+              memory: "256Mi"
