--- a/backend-svc.yml
+++ b/backend-svc.yml
@@ -3,14 +3,11 @@ kind: Service
 metadata:
   name: backend
   namespace: devopschallenge
-  labels:
-    app: backend
 spec:
   type: NodePort
-  selector:
-    app: backend
+  selector: { app: backend }
   ports:
     - name: http
-      port: 8080
-      targetPort: 8080
+      port: 11130
+      targetPort: 11130
       nodePort: 31130
