--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -32,10 +32,5 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 20
           resources:
-            requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
-              cpu: "300m"
-              memory: "256Mi"
-
+            requests: { cpu: "100m", memory: "128Mi" }
+            limits:   { cpu: "300m", memory: "256Mi" }
