--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -23,7 +23,16 @@ spec:
               value: "http://0.0.0.0:11130"
           ports:
             - containerPort: 11130
+          readinessProbe:
+            httpGet: { path: "/healthz", port: 11130 }
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet: { path: "/healthz", port: 11130 }
+            initialDelaySeconds: 30
+            periodSeconds: 20
           resources:
             requests: { cpu: "100m", memory: "128Mi" }
             limits:   { cpu: "300m", memory: "256Mi" }
+
 
