--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -21,6 +21,13 @@ spec:
           env:
             - name: ASPNETCORE_URLS
               value: "http://0.0.0.0:11130"
+          envFrom:
+            - secretRef:
+                name: postgres-secret
+          env:
+            - name: ConnectionStrings__DefaultConnection
+              value: "Host=postgres;Port=5432;Database=mydb;Username=$(POSTGRES_USER);Password=$(POSTGRES_PASSWORD)"
+
           ports:
             - containerPort: 11130
           resources:
