--- a/backend-hpa.yml
+++ b/backend-hpa.yml
@@ -3,6 +3,8 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: backend-hpa
   namespace: devopschallenge
+  labels:
+    app: backend
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
