--- a/backend-svc.yml
+++ b/backend-svc.yml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: backend
   namespace: devopschallenge
+  labels:
+    app: backend
 spec:
   type: NodePort
   selector:
