--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -25,7 +25,7 @@ spec:
             - name: ASPNETCORE_URLS
               value: "http://0.0.0.0:11130"
             - name: ConnectionStrings__DefaultConnection
-              value: "Host=postgres;Port=5432;Database=mydb;Username=$(POSTGRES_USER);Password=$(POSTGRES_PASSWORD)"
+              value: "Host=postgres;Port=5432;Database=mydb;Username=$(POSTGRES_USERNAME);Password=$(POSTGRES_PASSWORD)"
           ports:
             - containerPort: 11130
           resources:
