--- a/backend-deploy.yml
+++ b/backend-deploy.yml
@@ -24,6 +24,21 @@ spec:
           env:
             - name: ASPNETCORE_URLS
               value: "http://0.0.0.0:11130"
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_DB
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
             - name: ConnectionStrings__DefaultConnection
               value: "Host=postgres.devopschallenge.svc.cluster.local;Port=5432;Database=mydb;Username=$(POSTGRES_USERNAME);Password=$(POSTGRES_PASSWORD)"
           ports:
