--- a/backend-secret.yml
+++ b/backend-secret.yml
@@ -3,10 +3,8 @@ kind: Secret
 metadata:
   name: backend-secret
   namespace: devopschallenge
-  labels:
-    app: backend
 type: Opaque
-data:
-  POSTGRES_USER: ((postgres-username))
-  POSTGRES_PASSWORD: ((postgres-password))
-  POSTGRES_DB: ((postgres-db))
+stringData:
+  ConnectionStrings__DefaultConnection: >
+    Host=postgres.devopschallenge.svc.cluster.local;
+    Port=5432;Database=((postgres-db));Username=((postgres-username));Password=((postgres-password))
