--- a/backend-secret.yml
+++ b/backend-secret.yml
@@ -7,4 +7,4 @@ type: Opaque
 stringData:
   ConnectionStrings__DefaultConnection: >
     Host=postgres.devopschallenge.svc.cluster.local;
-    Port=5432;Database=__POSTGRES_DB__;Username=__POSTGRES_USERNAME__;Password=__POSTGRES_PASSWORD__;
+    Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USERNAME};Password=${POSTGRES_PASSWORD};
