--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=6543;Database=mydb;Username=<USER>;Password=<PASS>"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=mydb;Username=emine;Password=emine"
   }
 }
