--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=mydb;Username=emine;Password=emine"
+    "DefaultConnection": "Host=postgres.devopschallenge.svc.cluster.local;Port=5432;Database=mydb;Username=emine;Password=emine"
   }
 }
