--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres.devopschallenge.svc.cluster.local;Port=5432;Database=mydb;Username=emine;Password=emine"
-  }
+  "AllowedHosts": "*"
 }
